# dd-car-reviewer

./: .gitignore  pyproject.toml
donedeal_reviews/: 00_get_youtube_video_ids_for_channel.py  01_download_youtube_videos.py  02_transcribe_mp3_files.py  03_increase_chunk_size_with_overlap.py  04_embed_and_upload_to_pinecone.py  app.py  ask_vector_and_supplment_with_ai.py
